<resources>
    <string name="app_name">GoMart</string>
    <string name="title_activity_toolbar">ToolbarActivity</string>
    <string name="hint_useremail">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">LOGIN</string>
    <string name="dont_have_account">Crear nuevo usuario</string>
    <string name="create_here">, crea aquí.</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">ÚNETE</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="toolbar_tittle_Main">Menú</string>
    <string name="minimum_password">Password muy corta, ingresa minimo 6 caracteres!</string>
    <string name="auth_failed">Autentificacion fallida, Revisar su email y clave o registrate</string>
    <string name="forgotPass">¿Olvidaste tu contraseña?</string>
    <string name="forgot_password_msg">Necesitamos su correo electrónico registrado para enviar las instrucciones para restablecer la contraseña.</string>
    <string name="btn_reset_password">Restablecer contraseña</string>
    <string name="lbl_forgot_password">¿Olvidó su contraseña?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_menu">Productos</string>
    <string name="title_registro">Registro</string>
    <string name="title_user">Usuario</string>
    <string name="ic_carrito">Carrito</string>
    <string name="title_account">Cuenta</string>

</resources>
