<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    tools:context=".ResetPasswordActivity">

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/actionbar_toolbar"/>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopToolbar"
            android:orientation="vertical"
            android:padding="@dimen/horizontal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.65">

            <ImageView
                android:layout_width="145dp"
                android:layout_height="150dp"
                android:layout_marginStart="80dp"
                android:src="@drawable/logo" />
            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/lbl_forgot_password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/horizontal_margin"
                        android:text="@string/forgot_password_msg"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="14dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/horizontal_margin"
                        android:theme="@style/EditTextWhite">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_useremail"
                            android:inputType="textEmailAddress"/>
                    </android.support.design.widget.TextInputLayout>

                    <!-- Login Button -->
                    <Button
                        android:id="@+id/btn_reset_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/horizontal_margin"
                        android:layout_marginTop="20dip"
                        android:background="@color/colorAccent"
                        android:text="@string/btn_reset_password"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </ScrollView>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />
        </LinearLayout>
</android.support.design.widget.CoordinatorLayout>